<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="50dp"
        android:text="@string/dessert"
        android:textColor="@android:color/holo_purple"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    </ScrollView>

    <ImageView
        android:id="@+id/donut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/donut_circle"

        android:contentDescription="@string/todo_donut" />

    <ImageView
        android:id="@+id/ice_cream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donut"
        app:srcCompat="@drawable/froyo_circle"

        android:contentDescription="@string/todo_icecream" />

    <ImageView
        android:id="@+id/froyo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ice_cream"
        app:srcCompat="@drawable/icecream_circle"

        android:contentDescription="@string/todo_froyo" />

    <TextView
        android:id="@+id/des_donut"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="@string/todo_donut"
        android:textColor="@android:color/holo_purple"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/donut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/donut" />

    <TextView
        android:id="@+id/des_icecream"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="@string/todo_icecream"
        android:textColor="@android:color/holo_purple"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/ice_cream"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ice_cream" />

    <TextView
        android:id="@+id/des_froyo"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="@string/todo_froyo"
        android:textColor="@android:color/holo_purple"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/froyo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/froyo" />

    <ImageButton
        android:id="@+id/choose_froyo"
        android:layout_width="36dp"
        android:layout_height="34dp"
        android:background="#EA80FC"
        android:onClick="FroYoOrder"
        app:layout_constraintEnd_toEndOf="@+id/des_froyo"
        app:layout_constraintTop_toBottomOf="@+id/des_froyo"
        app:srcCompat="@android:drawable/ic_menu_today"
        android:contentDescription="@string/add_to_cart_froyo" />

    <ImageButton
        android:id="@+id/choose_icecream"
        android:layout_width="37dp"
        android:layout_height="34dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:background="#EA80FC"
        android:onClick="IceCreamOrder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/des_icecream"
        app:srcCompat="@android:drawable/ic_menu_today"
        android:contentDescription="@string/add_to_cart_icecream" />

    <ImageButton
        android:id="@+id/choose_donut"
        android:layout_width="37dp"
        android:layout_height="34dp"
        android:background="#EA80FC"
        android:onClick="DonutOrder"
        app:layout_constraintEnd_toEndOf="@+id/des_donut"
        app:layout_constraintTop_toBottomOf="@+id/des_donut"
        app:srcCompat="@android:drawable/ic_menu_today"
        android:contentDescription="@string/add_to_cart_donut" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/price_donut"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton3"
        app:layout_constraintStart_toEndOf="@+id/imageButton3"
        app:layout_constraintTop_toTopOf="@+id/imageButton3"
        app:layout_constraintVertical_bias="0.384" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/price_icecream"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton4"
        app:layout_constraintStart_toEndOf="@+id/imageButton4"
        app:layout_constraintTop_toTopOf="@+id/imageButton4"
        app:layout_constraintVertical_bias="0.384" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="123dp"
        android:layout_height="17dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/price_froyo"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton5"
        app:layout_constraintStart_toEndOf="@+id/imageButton5"
        app:layout_constraintTop_toTopOf="@+id/imageButton5"
        app:layout_constraintVertical_bias="0.363" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="36dp"
        android:layout_height="32dp"
        android:layout_marginTop="5dp"
        android:background="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/des_donut"
        app:layout_constraintTop_toBottomOf="@+id/des_donut"
        app:srcCompat="@android:drawable/btn_star_big_on"
        android:contentDescription="@string/price_icon_donut" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="36dp"
        android:layout_height="32dp"
        android:layout_marginTop="5dp"
        android:background="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/des_froyo"
        app:layout_constraintTop_toBottomOf="@+id/des_froyo"
        app:srcCompat="@android:drawable/btn_star_big_on"
        android:contentDescription="@string/price_icon_froyo" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="36dp"
        android:layout_height="32dp"
        android:layout_marginTop="5dp"
        android:background="#FFFCFC"
        app:layout_constraintStart_toStartOf="@+id/des_icecream"
        app:layout_constraintTop_toBottomOf="@+id/des_icecream"
        app:srcCompat="@android:drawable/btn_star_big_on"
        android:contentDescription="@string/price_icon_icecream" />

</androidx.constraintlayout.widget.ConstraintLayout>