<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".YourCart">

    <TextView
        android:id="@+id/my_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="140dp"
        android:layout_marginRight="140dp"
        android:text="@string/your_cart"
        android:textColor="@color/teal_200"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="30dp"
        android:text="@string/string_back"
        android:onClick="BackOnCart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:text="@string/string_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="nextToOrder"/>

    <TextView
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="75dp"
        android:layout_marginRight="75dp"
        android:text="@string/quantity"
        android:textColor="#EA80FC"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_cart" />

    <TextView
        android:id="@+id/my_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="28dp"
        android:text="@string/your_food_1"
        android:textColor="#EA80FC"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_cart" />

    <TextView
        android:id="@+id/donut_cart"
        android:layout_width="122dp"
        android:layout_height="54dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:hint="@string/your_food_2"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_food" />

    <TextView
        android:id="@+id/ice_cream_cart"
        android:layout_width="122dp"
        android:layout_height="54dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="108dp"
        android:gravity="center"
        android:hint="@string/your_food_2"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_food" />

    <FrameLayout
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/ice_cream_cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ice_cream_cart">

        <TextView
            android:id="@+id/number_item2"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/number_1"
            android:textColor="@android:color/holo_orange_light"
            android:textColorHint="@android:color/holo_orange_light"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/remove_button_2"
            android:layout_width="39dp"
            android:layout_height="38dp"
            android:layout_gravity="start|center"
            android:background="#FFFFFF"
            android:contentDescription="@string/todo_remove"
            app:srcCompat="@drawable/ic_baseline_remove_circle_30"
            tools:ignore="VectorDrawableCompat" />

        <ImageButton
            android:id="@+id/add_button_2"
            android:layout_width="33dp"
            android:layout_height="39dp"
            android:layout_gravity="end|center"
            android:background="#FFFFFF"
            android:contentDescription="@string/todo_add"
            app:srcCompat="@drawable/ic_baseline_add_circle_24"
            tools:ignore="VectorDrawableCompat" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantity">

        <TextView
            android:id="@+id/number_item"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/number_1"
            android:textColor="@android:color/holo_orange_light"
            android:textColorHint="@android:color/holo_orange_light"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/remove_button"
            android:layout_width="39dp"
            android:layout_height="38dp"
            android:layout_gravity="start|center"
            android:background="#FFFFFF"
            android:contentDescription="@string/todo_remove"
            app:srcCompat="@drawable/ic_baseline_remove_circle_30"
            tools:ignore="VectorDrawableCompat" />

        <ImageButton
            android:id="@+id/add_button"
            android:layout_width="33dp"
            android:layout_height="39dp"
            android:layout_gravity="end|center"
            android:background="#FFFFFF"
            android:contentDescription="@string/todo_add"
            app:srcCompat="@drawable/ic_baseline_add_circle_24"
            tools:ignore="VectorDrawableCompat" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>